--- a/client/src/styles/Layout.css
+++ b/client/src/styles/Layout.css
@@ -28,7 +28,8 @@
 
 .active{
     background-color: white;
-    padding: 10px;
+    padding: 10px; 
+    margin-top: 25px;
 }
 
 .active a, .active i{
